--- a/HomeHelper/Strings/en/Resources.resw
+++ b/HomeHelper/Strings/en/Resources.resw
@@ -118,108 +118,108 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ConsumaLunaAnterioaraMesaj" xml:space="preserve">
-    <value>Consum luna anterioara</value>
+    <value>Previous month consumption</value>
   </data>
   <data name="ConsumLstUtilitati.Text" xml:space="preserve">
-    <value>Consum</value>
+    <value>Consumption</value>
   </data>
   <data name="ConsumLunaCurentaMesaj" xml:space="preserve">
-    <value>Consum luna curenta</value>
+    <value>This month consumption</value>
   </data>
   <data name="DataAlertaErrorValid" xml:space="preserve">
-    <value>Alerta nu va fi activa</value>
+    <value>The alert is not going to be active</value>
   </data>
   <data name="DataConsumExistent" xml:space="preserve">
-    <value>Pe aceasta data mai exista adaugat un consum</value>
+    <value>On this date there was added consumption</value>
   </data>
   <data name="DataConsumMicaDecatIndexInitial" xml:space="preserve">
-    <value>Data consumului nu poate fi mai mica decat data indexului initial</value>
+    <value>The data of this consumption is earlier than the initial index date</value>
   </data>
   <data name="DataIndexInitialRespectareConsumInitial" xml:space="preserve">
-    <value>Data invalida in respectarea intervalelor consumului</value>
+    <value>Invalid date regarding the consumption range</value>
   </data>
   <data name="DenumireUtilitateCampGol" xml:space="preserve">
-    <value>Denumire: Campul este gol</value>
+    <value>Name: This field is empty</value>
   </data>
   <data name="IdUtilitateErrorValid" xml:space="preserve">
-    <value>Utilitatea nu a fost selectata</value>
+    <value>The utility was not selected</value>
   </data>
   <data name="IndexInitialValoareInvalida" xml:space="preserve">
-    <value>Index Initial: Valoare invalida</value>
+    <value>Initial Index:Invalid value</value>
   </data>
   <data name="IndexInvalid" xml:space="preserve">
-    <value>Valoare invalida la index</value>
+    <value>Invalid value in index</value>
   </data>
   <data name="IndexMaiMicDecat" xml:space="preserve">
-    <value>Indexul este mai mic decat</value>
+    <value>Index is less than</value>
   </data>
   <data name="IndexUtilitateInvalidInterval" xml:space="preserve">
-    <value>Indexul nu se afla in intervalul</value>
+    <value>The index is not in range</value>
   </data>
   <data name="InregistrariGoale.Text" xml:space="preserve">
-    <value>Nu sunt inregistrari adaugate</value>
+    <value>The are no records added</value>
   </data>
   <data name="NuSuntInregistrariAdaugate" xml:space="preserve">
-    <value>Nu sunt inregistrari adaugate</value>
+    <value>The are no records added</value>
   </data>
   <data name="NuSuntInregistrariAdaugateUtilitatea" xml:space="preserve">
-    <value>Nu sunt inregistrari adaugate pentru utilitatea:</value>
+    <value>The are no records added for the utility</value>
   </data>
   <data name="UnitateMasuraCampGol" xml:space="preserve">
-    <value>Unitate Masura: Campul este gol</value>
+    <value>Unit of measurement:The field is empty</value>
   </data>
   <data name="lblAlerte.Text" xml:space="preserve">
-    <value>Alerte</value>
+    <value>Alerts</value>
   </data>
   <data name="lblConsum.Text" xml:space="preserve">
-    <value>Consum</value>
+    <value>Consumption</value>
   </data>
   <data name="lblData.Text" xml:space="preserve">
-    <value>Data</value>
+    <value>Date</value>
   </data>
   <data name="lblDataAlerta.Text" xml:space="preserve">
-    <value>Data Alerta</value>
+    <value>Alert Date</value>
   </data>
   <data name="lblDataConsum.Text" xml:space="preserve">
-    <value>Data consum</value>
+    <value>Consumption Date</value>
   </data>
   <data name="lblDataIndexInitial.Text" xml:space="preserve">
-    <value>Data index initial</value>
+    <value>Initial Index Date</value>
   </data>
   <data name="lblFrecventaAlerta.Text" xml:space="preserve">
-    <value>Frecventa Alerta</value>
+    <value>Alert frequency</value>
   </data>
   <data name="lblIndex.Text" xml:space="preserve">
     <value>Index</value>
   </data>
   <data name="lblUnitateDeMasura.Text" xml:space="preserve">
-    <value>Unitate masura</value>
+    <value>Unit of measurement</value>
   </data>
   <data name="lblUtitlitati.Text" xml:space="preserve">
-    <value>Utilitate</value>
+    <value>Utility</value>
   </data>
   <data name="lblValoareInitiala.Text" xml:space="preserve">
-    <value>Valoare initiala</value>
+    <value>Initial value</value>
   </data>
   <data name="LunaAnterioara" xml:space="preserve">
-    <value>Luna Anterioara</value>
+    <value>Previous month</value>
   </data>
   <data name="LunaCurenta" xml:space="preserve">
-    <value>Luna Curenta</value>
+    <value>This month</value>
   </data>
   <data name="enumFrecventeAlerteAnual" xml:space="preserve">
-    <value>Anual</value>
+    <value>Yearly</value>
   </data>
   <data name="enumFrecventeAlerteFaraRepetare" xml:space="preserve">
-    <value>Fara repetare</value>
+    <value>Without repeat</value>
   </data>
   <data name="enumFrecventeAlerteLunar" xml:space="preserve">
-    <value>Lunar</value>
+    <value>Monthly</value>
   </data>
   <data name="enumFrecventeAlerteSaptamanal" xml:space="preserve">
-    <value>Saptamanal</value>
+    <value>Weekly</value>
   </data>
   <data name="enumFrecventeAlerteZilnic" xml:space="preserve">
-    <value>Zilnic</value>
+    <value>Daily</value>
   </data>
 </root>
