Finalizat cu resurse mnu item

--- a/HomeHelperPhone/Resources/AppResources.resx
+++ b/HomeHelperPhone/Resources/AppResources.resx
@@ -261,4 +261,10 @@
   <data name="ResourceLanguage" xml:space="preserve">
     <value>en-US</value>
   </data>
+  <data name="mnuDelete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="mnuEdit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
 </root>
