--- a/HomeHelperPhone/Resources/AppResources.ro-ro.resx
+++ b/HomeHelperPhone/Resources/AppResources.ro-ro.resx
@@ -261,4 +261,10 @@
   <data name="ResourceLanguage" xml:space="preserve">
     <value>ro-ro</value>
   </data>
+  <data name="mnuDelete" xml:space="preserve">
+    <value>Sterge</value>
+  </data>
+  <data name="mnuEdit" xml:space="preserve">
+    <value>Editeaza</value>
+  </data>
 </root>
