1.Apare fara numar la partea cu ascunsul filtrului de data

--- a/HomeHelperPhone/Resources/AppResources.resx
+++ b/HomeHelperPhone/Resources/AppResources.resx
@@ -267,4 +267,7 @@
   <data name="mnuEdit" xml:space="preserve">
     <value>Edit</value>
   </data>
+  <data name="chrShowFilter" xml:space="preserve">
+    <value>Filter</value>
+  </data>
 </root>
