--- a/HomeHelperPhone/Resources/AppResources.ro-ro.resx
+++ b/HomeHelperPhone/Resources/AppResources.ro-ro.resx
@@ -267,4 +267,7 @@
   <data name="mnuEdit" xml:space="preserve">
     <value>Editeaza</value>
   </data>
+  <data name="chrShowFilter" xml:space="preserve">
+    <value>Filtru</value>
+  </data>
 </root>
