4.Netradus Evolutie consum cand intru la consum utilitate si tot imi apare fara numar la filtru

--- a/HomeHelperPhone/Resources/AppResources.resx
+++ b/HomeHelperPhone/Resources/AppResources.resx
@@ -270,4 +270,7 @@
   <data name="chrShowFilter" xml:space="preserve">
     <value>Filter</value>
   </data>
+  <data name="viewConsumuriTitlu" xml:space="preserve">
+    <value>Evolution</value>
+  </data>
 </root>
